# bip-bolt-report

./: .gitignore  pyproject.toml
config/: config.json
src/report/: __init__.py  __main__.py
src/report/analysis/: dataset_analyser.py
src/report/cost_model/: __init__.py  llm_cost.py
src/report/ingestion/: repo_sync.py
src/report/parsing/: __init__.py  parser.py
src/report/reporting/: chart_builder.py  report_writer.py
src/report/utils/: logging_config.py
